# model_routing

./: .gitignore  LICENSE  README.md  contextual_bandit(next idea).md  model_routing_demo.py  pyproject.toml
.github/workflows/: tests.yml
bayesian_router/: __init__.py  presets.py  rewards.py  router.py  simulator.py  types.py
docs/: bayesian_bandits_study_material.md  bayesian_bandits_study_material_COMPLETE.md  bayesian_model_routing_workflow.md  devconf_model_routing_talk_guide.md  proposal.md  quick_reference_card.md  readme_study.md  reference_v0.py  school.md
examples/: 01_basic_usage.py  02_model_rot.py  03_cold_start.py  04_streamlit_demo.py
notebooks/: bayesian_router_simulations.ipynb  bayesian_router_talk_end_to_end.ipynb
tests/: test_rewards.py  test_router.py
